[gd_scene load_steps=31 format=2]

[ext_resource path="res://Assets/slice33_33.png" type="Texture" id=1]
[ext_resource path="res://Character/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/pH64_furniture_OGA_alpha.png" type="Texture" id=3]
[ext_resource path="res://Assets/pH64_doors_and_windows_OGA_alpha.png" type="Texture" id=4]
[ext_resource path="res://World/Stage0.gd" type="Script" id=5]
[ext_resource path="res://Assets/pH64_electronics_OGA_alpha.png" type="Texture" id=6]
[ext_resource path="res://Interface/UserInterface.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/slice30_30.png" type="Texture" id=8]
[ext_resource path="res://Assets/slice32_32.png" type="Texture" id=9]
[ext_resource path="res://Assets/slice24_24.png" type="Texture" id=10]
[ext_resource path="res://Assets/slice31_31.png" type="Texture" id=11]
[ext_resource path="res://Assets/slice22_22.png" type="Texture" id=12]
[ext_resource path="res://Assets/slice21_21.png" type="Texture" id=13]
[ext_resource path="res://Assets/slice23_23.png" type="Texture" id=14]
[ext_resource path="res://Assets/slice03_03.png" type="Texture" id=15]
[ext_resource path="res://Assets/set4_background.png" type="Texture" id=16]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=10]
0/name = "slice33_33.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 1
0/autotile/bitmask_mode = 2
0/autotile/bitmask_flags = [  ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 64, 64 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "slice03_03.png 1"
1/texture = ExtResource( 15 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 1
1/autotile/bitmask_mode = 0
1/autotile/bitmask_flags = [  ]
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 64, 64 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "slice32_32.png 2"
2/texture = ExtResource( 9 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 64 )
2/tile_mode = 1
2/autotile/bitmask_mode = 0
2/autotile/bitmask_flags = [  ]
2/autotile/icon_coordinate = Vector2( 0, 0 )
2/autotile/tile_size = Vector2( 64, 64 )
2/autotile/spacing = 0
2/autotile/occluder_map = [  ]
2/autotile/navpoly_map = [  ]
2/autotile/priority_map = [  ]
2/autotile/z_index_map = [  ]
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 3 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "slice24_24.png 3"
3/texture = ExtResource( 10 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 64, 64 )
3/tile_mode = 1
3/autotile/bitmask_mode = 0
3/autotile/bitmask_flags = [  ]
3/autotile/icon_coordinate = Vector2( 0, 0 )
3/autotile/tile_size = Vector2( 64, 64 )
3/autotile/spacing = 0
3/autotile/occluder_map = [  ]
3/autotile/navpoly_map = [  ]
3/autotile/priority_map = [  ]
3/autotile/z_index_map = [  ]
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 4 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "slice23_23.png 4"
4/texture = ExtResource( 14 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 64, 64 )
4/tile_mode = 1
4/autotile/bitmask_mode = 0
4/autotile/bitmask_flags = [  ]
4/autotile/icon_coordinate = Vector2( 0, 0 )
4/autotile/tile_size = Vector2( 64, 64 )
4/autotile/spacing = 0
4/autotile/occluder_map = [  ]
4/autotile/navpoly_map = [  ]
4/autotile/priority_map = [  ]
4/autotile/z_index_map = [  ]
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 5 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "slice21_21.png 5"
5/texture = ExtResource( 13 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 64, 64 )
5/tile_mode = 1
5/autotile/bitmask_mode = 0
5/autotile/bitmask_flags = [  ]
5/autotile/icon_coordinate = Vector2( 0, 0 )
5/autotile/tile_size = Vector2( 64, 64 )
5/autotile/spacing = 0
5/autotile/occluder_map = [  ]
5/autotile/navpoly_map = [  ]
5/autotile/priority_map = [  ]
5/autotile/z_index_map = [  ]
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 6 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "slice22_22.png 6"
6/texture = ExtResource( 12 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 64, 64 )
6/tile_mode = 1
6/autotile/bitmask_mode = 0
6/autotile/bitmask_flags = [  ]
6/autotile/icon_coordinate = Vector2( 0, 0 )
6/autotile/tile_size = Vector2( 64, 64 )
6/autotile/spacing = 0
6/autotile/occluder_map = [  ]
6/autotile/navpoly_map = [  ]
6/autotile/priority_map = [  ]
6/autotile/z_index_map = [  ]
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 7 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "slice30_30.png 7"
7/texture = ExtResource( 8 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 64, 64 )
7/tile_mode = 1
7/autotile/bitmask_mode = 0
7/autotile/bitmask_flags = [  ]
7/autotile/icon_coordinate = Vector2( 0, 0 )
7/autotile/tile_size = Vector2( 64, 64 )
7/autotile/spacing = 0
7/autotile/occluder_map = [  ]
7/autotile/navpoly_map = [  ]
7/autotile/priority_map = [  ]
7/autotile/z_index_map = [  ]
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape = SubResource( 8 )
7/shape_one_way = false
7/shape_one_way_margin = 1.0
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "slice31_31.png 8"
8/texture = ExtResource( 11 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 64, 64 )
8/tile_mode = 1
8/autotile/bitmask_mode = 0
8/autotile/bitmask_flags = [  ]
8/autotile/icon_coordinate = Vector2( 0, 0 )
8/autotile/tile_size = Vector2( 64, 64 )
8/autotile/spacing = 0
8/autotile/occluder_map = [  ]
8/autotile/navpoly_map = [  ]
8/autotile/priority_map = [  ]
8/autotile/z_index_map = [  ]
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape = SubResource( 9 )
8/shape_one_way = false
8/shape_one_way_margin = 1.0
8/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
8/z_index = 0

[sub_resource type="Animation" id=11]
tracks/0/type = "value"
tracks/0/path = NodePath("Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 208, 360 ), Vector2( 336, 360 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Player")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ "Walk" ],
"method": "play_animation"
}, {
"args": [ "Idle" ],
"method": "play_animation"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "im_home"
} ]
}

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 28, 52 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 64, 32 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 32, 40 )

[node name="Stage0" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="Node2D" parent="."]
z_index = -4096

[node name="ColorRect" type="ColorRect" parent="Background"]
margin_left = -384.0
margin_top = -512.0
margin_right = 2816.0
margin_bottom = 1632.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HomeBackground" type="Node2D" parent="."]
z_index = -3000

[node name="TextureRect" type="TextureRect" parent="HomeBackground"]
margin_left = 64.0
margin_right = 1216.0
margin_bottom = 508.0
texture = ExtResource( 16 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="HomeBackground"]
margin_left = 1664.0
margin_top = 768.0
margin_right = 2560.0
margin_bottom = 1276.0
texture = ExtResource( 16 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 10 )
format = 1
tile_data = PoolIntArray( 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 65537, 0, 0, 65538, 8, 0, 65539, 2, 0, 65540, 2, 0, 65541, 2, 0, 65542, 2, 0, 65543, 2, 0, 65544, 2, 0, 65545, 2, 0, 65546, 2, 0, 65547, 2, 0, 65548, 2, 0, 65549, 2, 0, 65550, 2, 0, 65551, 2, 0, 65552, 2, 0, 65553, 7, 0, 65554, 0, 0, 131073, 0, 0, 131074, 3, 0, 131089, 4, 0, 131090, 0, 0, 196609, 0, 0, 196610, 3, 0, 196625, 4, 0, 196626, 0, 0, 262145, 0, 0, 262146, 3, 0, 262161, 4, 0, 262162, 0, 0, 327681, 0, 0, 327682, 3, 0, 327697, 4, 0, 327698, 0, 0, 393217, 0, 0, 393218, 6, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 5, 0, 393234, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 786458, 1073741824, 0, 786459, 1073741824, 0, 786460, 1073741824, 0, 786461, 1073741824, 0, 786462, 1073741824, 0, 786463, 1073741824, 0, 786464, 1073741824, 0, 786465, 1073741824, 0, 786466, 0, 0, 786467, 1073741824, 0, 786468, 1073741824, 0, 786469, 1073741824, 0, 786470, 1073741824, 0, 786471, 1073741824, 0, 851994, 1073741824, 0, 851995, 8, 0, 851996, 2, 0, 851997, 2, 0, 851998, 2, 0, 851999, 2, 0, 852000, 2, 0, 852001, 2, 0, 852002, 2, 0, 852003, 2, 0, 852004, 2, 0, 852005, 2, 0, 852006, 7, 0, 852007, 1073741824, 0, 917530, 1073741824, 0, 917531, 3, 0, 917542, 4, 0, 917543, 1073741824, 0, 983066, 1073741824, 0, 983067, 3, 0, 983078, 4, 0, 983079, 1073741824, 0, 1048602, 1073741824, 0, 1048603, 3, 0, 1048614, 4, 0, 1048615, 1073741824, 0, 1114138, 1073741824, 0, 1114139, 3, 0, 1114150, 4, 0, 1114151, 1073741824, 0, 1179674, 1073741824, 0, 1179675, 6, 0, 1179676, 1, 0, 1179677, 1, 0, 1179678, 1, 0, 1179679, 1, 0, 1179680, 1, 0, 1179681, 1, 0, 1179682, 1, 0, 1179683, 1, 0, 1179684, 1, 0, 1179685, 1, 0, 1179686, 5, 0, 1179687, 1073741824, 0, 1245210, 1073741824, 0, 1245211, 1073741824, 0, 1245212, 1073741824, 0, 1245213, 1073741824, 0, 1245214, 1073741824, 0, 1245215, 1073741824, 0, 1245216, 1073741824, 0, 1245217, 1073741824, 0, 1245218, 1073741824, 0, 1245219, 1073741824, 0, 1245220, 1073741824, 0, 1245221, 1073741824, 0, 1245222, 1073741824, 0, 1245223, 1073741824, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 208, 360 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="UserInterface" parent="UI" instance=ExtResource( 7 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "ImHome"
anims/ImHome = SubResource( 11 )

[node name="Decoration" type="Node2D" parent="."]
z_index = -10

[node name="Sprite" type="Sprite" parent="Decoration"]
position = Vector2( 1062, 340 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 92, 144, 25, 44 )

[node name="Sprite2" type="Sprite" parent="Decoration"]
position = Vector2( 854, 368 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 127, 113, 38, 21 )

[node name="Sprite3" type="Sprite" parent="Decoration"]
position = Vector2( 902, 360 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 175, 162, 18, 30 )

[node name="Sprite4" type="Sprite" parent="Decoration"]
position = Vector2( 802, 360 )
rotation = 3.14159
scale = Vector2( 2, -2 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 175, 162, 18, 30 )

[node name="Sprite5" type="Sprite" parent="Decoration"]
position = Vector2( 1014, 360 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 173, 166, 25, 23 )

[node name="Sprite6" type="Sprite" parent="Decoration"]
position = Vector2( 856, 308 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 270, 131, 23, 27 )

[node name="Sprite7" type="Sprite" parent="Decoration"]
position = Vector2( 956, 308 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 270, 131, 23, 27 )

[node name="Sprite8" type="Sprite" parent="Decoration"]
position = Vector2( 640, 332 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 145, 67, 28, 53 )

[node name="Sprite9" type="Sprite" parent="Decoration"]
position = Vector2( 417, 370 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 6, 124, 33, 14 )

[node name="Sprite10" type="Sprite" parent="Decoration"]
position = Vector2( 417, 338 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 292, 26, 32, 26 )

[node name="Sprite11" type="Sprite" parent="Decoration"]
position = Vector2( 540, 324 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 270, 131, 23, 27 )

[node name="Sprite12" type="Sprite" parent="Decoration"]
position = Vector2( 416, 272 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 382, 96, 16, 16 )

[node name="Sprite13" type="Sprite" parent="Decoration"]
position = Vector2( 1820, 1100 )
rotation = 8.74228e-08
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 145, 67, 28, 53 )

[node name="Sprite14" type="Sprite" parent="Decoration"]
position = Vector2( 2380, 1128 )
rotation = -3.14159
scale = Vector2( 2, -2 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 57, 1, 57, 27 )

[node name="Sprite15" type="Sprite" parent="Decoration"]
position = Vector2( 1932, 1100 )
rotation = -3.14159
scale = Vector2( 2, -2 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 264, 66, 30, 54 )

[node name="Sprite16" type="Sprite" parent="Decoration"]
position = Vector2( 2048, 1116 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 120, 5, 25, 38 )

[node name="Sprite17" type="Sprite" parent="Decoration"]
position = Vector2( 2128, 1108 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 222, 37, 33, 45 )

[node name="Sprite18" type="Sprite" parent="Decoration"]
position = Vector2( 2208, 1132 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 193, 140, 31, 21 )

[node name="Sprite19" type="Sprite" parent="Decoration"]
position = Vector2( 2204, 1096 )
rotation = 3.14159
scale = Vector2( 2, -2 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 380, 54, 33, 22 )

[node name="Sprite20" type="Sprite" parent="Decoration"]
position = Vector2( 2192, 1040 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 381, 114, 19, 21 )

[node name="Sprite21" type="Sprite" parent="Decoration"]
position = Vector2( 1904, 908 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 147, 2, 11, 16 )

[node name="Sprite22" type="Sprite" parent="Decoration"]
position = Vector2( 2064, 908 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 147, 2, 11, 16 )

[node name="Sprite23" type="Sprite" parent="Decoration"]
position = Vector2( 2160, 908 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 147, 2, 11, 16 )

[node name="Sprite24" type="Sprite" parent="Decoration"]
position = Vector2( 2316, 908 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 147, 2, 11, 16 )

[node name="Sprite25" type="Sprite" parent="Decoration"]
position = Vector2( 420, 148 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 28, 1, 33, 23 )

[node name="Sprite26" type="Sprite" parent="Decoration"]
position = Vector2( 496, 348 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 93, 42, 16, 36 )

[node name="Sprite27" type="Sprite" parent="Decoration"]
position = Vector2( 720, 348 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 93, 42, 16, 36 )

[node name="Sprite28" type="Sprite" parent="Decoration"]
position = Vector2( 856, 144 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 105, -2, 23, 23 )

[node name="Sprite29" type="Sprite" parent="Decoration"]
position = Vector2( 220, 332 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 265, 13, 28, 53 )

[node name="DoorToBedroom" type="Area2D" parent="."]
position = Vector2( 640, 332 )
collision_layer = 1024
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorToBedroom"]
shape = SubResource( 12 )

[node name="DoorToLivingroom" type="Area2D" parent="."]
position = Vector2( 1820, 1100 )
collision_layer = 1024
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorToLivingroom"]
shape = SubResource( 12 )

[node name="BedArea" type="Area2D" parent="."]
position = Vector2( 2368, 1120 )
collision_layer = 1024
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BedArea"]
shape = SubResource( 13 )

[node name="ComputerArea" type="Area2D" parent="."]
position = Vector2( 2204, 1112 )
collision_layer = 1024
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ComputerArea"]
shape = SubResource( 14 )
[connection signal="body_entered" from="DoorToBedroom" to="." method="_on_DoorToBedroom_body_entered"]
[connection signal="body_exited" from="DoorToBedroom" to="." method="_on_DoorToBedroom_body_exited"]
[connection signal="body_entered" from="DoorToLivingroom" to="." method="_on_DoorToLivingroom_body_entered"]
[connection signal="body_exited" from="DoorToLivingroom" to="." method="_on_DoorToLivingroom_body_exited"]
[connection signal="body_entered" from="BedArea" to="." method="_on_BedArea_body_entered"]
[connection signal="body_exited" from="BedArea" to="." method="_on_BedArea_body_exited"]
[connection signal="body_entered" from="ComputerArea" to="." method="_on_ComputerArea_body_entered"]
[connection signal="body_exited" from="ComputerArea" to="." method="_on_ComputerArea_body_exited"]
